--- a/public/index.html
+++ b/public/index.html
@@ -4,19 +4,20 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta property="og:title" content="buzzphonics" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+    <meta property="og:title" content="jifunze" />
     <meta property="og:type" content="website" />
-    <meta name="og:description" content="Helping kids with their reading journey.">
-    <meta property="og:url" content="https://www.buzzphonics.com/" />
-    <meta property="og:image" content="https://user-images.githubusercontent.com/29425781/156545812-f28fb36f-5ac0-43ec-93ef-7ae5a9f72882.png" />
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="msapplication-TileColor" content="#00aba9">
-    <meta name="theme-color" content="#ffffff">
+    <meta
+      name="og:description"
+      content="Helping kids with their reading journey."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="msapplication-TileColor" content="#00aba9" />
+    <meta name="theme-color" content="#ffffff" />
     <meta
       name="description"
       content="Web site created using create-react-app"
